examples/node-web-app/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: NodePort
  selector:
    app: node-spec-selector-label
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30107
